--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,21 +3,21 @@ name: test
 on:
   push:
     branches:
-    - master
+    - trunk
   pull_request:
     branches:
-    - master
+    - trunk
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
 
     strategy:
       matrix:
         node-version: ['10.x']
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
     - name: Shutdown Ubuntu MySQL (SUDO)
       run: sudo service mysql stop
     - name: Use Node.js ${{ matrix.node-version }}
@@ -25,7 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Set up MySQL 5.7
-      uses: mirromutth/mysql-action@master
+      uses: jchrys/mysql-action@trunk
       with:
         mysql version: 5.7
         mysql database: test
